--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -116,6 +116,9 @@
 
     .table-wrapper {
 
+        background-color: #f8ffff;
+        border: 1px solid #a0c0c0;
+
         .description {
             background-color: #50500010;
             padding: 20px;
@@ -129,6 +132,12 @@
             background-color: #00000010;
             padding: 1rem .5rem;
             margin-bottom: 3px;
+
+            .filtered {
+                background-color: #c0e0e0;
+                border: 1px solid #90b0b0;
+                color: #206060;
+            }
         }
 
         .body {
