--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -120,9 +120,8 @@
         border: 1px solid #a0c0c0;
 
         .description {
-            background-color: #50500010;
-            padding: 20px;
-            margin-bottom: 8px;
+            padding: 36px 20px;
+            margin-bottom: 3px;
             color: #505050;
             font-style: italic;
         }
